// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders checked state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-component-ui-switch om-component-ui-switch-checked"
      >
        <span
          class="om-component-ui-switch-content"
        >
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-default"
          >
            Checked
          </span>
        </span>
        <span
          class="om-component-ui-switch-track-wrapper"
        >
          <input
            aria-label="Checked"
            checked=""
            class="om-component-ui-switch-input"
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-component-ui-switch-track"
          >
            <span
              class="om-component-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-component-ui-switch om-component-ui-switch-checked"
    >
      <span
        class="om-component-ui-switch-content"
      >
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-default"
        >
          Checked
        </span>
      </span>
      <span
        class="om-component-ui-switch-track-wrapper"
      >
        <input
          aria-label="Checked"
          checked=""
          class="om-component-ui-switch-input"
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-component-ui-switch-track"
        >
          <span
            class="om-component-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-component-ui-switch"
      >
        <span
          class="om-component-ui-switch-content"
        >
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-default"
          >
            Test Label
          </span>
        </span>
        <span
          class="om-component-ui-switch-track-wrapper"
        >
          <input
            aria-label="Test Label"
            class="om-component-ui-switch-input"
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-component-ui-switch-track"
          >
            <span
              class="om-component-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-component-ui-switch"
    >
      <span
        class="om-component-ui-switch-content"
      >
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-default"
        >
          Test Label
        </span>
      </span>
      <span
        class="om-component-ui-switch-track-wrapper"
      >
        <input
          aria-label="Test Label"
          class="om-component-ui-switch-input"
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-component-ui-switch-track"
        >
          <span
            class="om-component-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-component-ui-switch om-component-ui-switch-disabled"
      >
        <span
          class="om-component-ui-switch-content"
        >
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-disabled"
          >
            Disabled
          </span>
        </span>
        <span
          class="om-component-ui-switch-track-wrapper"
        >
          <input
            aria-label="Disabled"
            class="om-component-ui-switch-input"
            disabled=""
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-component-ui-switch-track"
          >
            <span
              class="om-component-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-component-ui-switch om-component-ui-switch-disabled"
    >
      <span
        class="om-component-ui-switch-content"
      >
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-disabled"
        >
          Disabled
        </span>
      </span>
      <span
        class="om-component-ui-switch-track-wrapper"
      >
        <input
          aria-label="Disabled"
          class="om-component-ui-switch-input"
          disabled=""
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-component-ui-switch-track"
        >
          <span
            class="om-component-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders disabled state with description 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-component-ui-switch om-component-ui-switch-disabled"
      >
        <span
          class="om-component-ui-switch-content"
        >
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-disabled"
          >
            Disabled
          </span>
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-md om-component-ui-typography-color-disabled om-component-ui-switch-description"
          >
            Description
          </span>
        </span>
        <span
          class="om-component-ui-switch-track-wrapper"
        >
          <input
            aria-label="Disabled"
            class="om-component-ui-switch-input"
            disabled=""
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-component-ui-switch-track"
          >
            <span
              class="om-component-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-component-ui-switch om-component-ui-switch-disabled"
    >
      <span
        class="om-component-ui-switch-content"
      >
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-disabled"
        >
          Disabled
        </span>
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-md om-component-ui-typography-color-disabled om-component-ui-switch-description"
        >
          Description
        </span>
      </span>
      <span
        class="om-component-ui-switch-track-wrapper"
      >
        <input
          aria-label="Disabled"
          class="om-component-ui-switch-input"
          disabled=""
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-component-ui-switch-track"
        >
          <span
            class="om-component-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders with description 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-component-ui-switch"
      >
        <span
          class="om-component-ui-switch-content"
        >
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-default"
          >
            Label
          </span>
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-md om-component-ui-typography-color-default-tertiary om-component-ui-switch-description"
          >
            Description
          </span>
        </span>
        <span
          class="om-component-ui-switch-track-wrapper"
        >
          <input
            aria-label="Label"
            class="om-component-ui-switch-input"
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-component-ui-switch-track"
          >
            <span
              class="om-component-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-component-ui-switch"
    >
      <span
        class="om-component-ui-switch-content"
      >
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-default"
        >
          Label
        </span>
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-md om-component-ui-typography-color-default-tertiary om-component-ui-switch-description"
        >
          Description
        </span>
      </span>
      <span
        class="om-component-ui-switch-track-wrapper"
      >
        <input
          aria-label="Label"
          class="om-component-ui-switch-input"
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-component-ui-switch-track"
        >
          <span
            class="om-component-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch renders with right label placement 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-component-ui-switch om-component-ui-switch-right"
      >
        <span
          class="om-component-ui-switch-content"
        >
          <span
            class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-default"
          >
            Right
          </span>
        </span>
        <span
          class="om-component-ui-switch-track-wrapper"
        >
          <input
            aria-label="Right"
            class="om-component-ui-switch-input"
            role="switch"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="om-component-ui-switch-track"
          >
            <span
              class="om-component-ui-switch-thumb"
            />
          </span>
        </span>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-component-ui-switch om-component-ui-switch-right"
    >
      <span
        class="om-component-ui-switch-content"
      >
        <span
          class="om-component-ui-typography om-component-ui-typography-body om-component-ui-typography-body-lg om-component-ui-typography-color-default"
        >
          Right
        </span>
      </span>
      <span
        class="om-component-ui-switch-track-wrapper"
      >
        <input
          aria-label="Right"
          class="om-component-ui-switch-input"
          role="switch"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="om-component-ui-switch-track"
        >
          <span
            class="om-component-ui-switch-thumb"
          />
        </span>
      </span>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
